<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SplashFragment">


    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.example.mygitapplication2.view.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_SplashFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.mygitapplication2.view.MainFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.mygitapplication2.view.DetailsFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_details">

        <action
            android:id="@+id/action_SecondFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
</navigation>