<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="8dp"
        android:elevation="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivUserImages"
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:src="@mipmap/ic_launcher"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ivUserImages"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/label_login"
                tools:text="@string/label_login"
                style="@style/TextStyle.Medium"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvLabelTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="shwet"
                style="@style/TextStyle.Bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ivUserImages"
                app:layout_constraintTop_toBottomOf="@id/tvLogin"
                android:text="@string/label_id"
                tools:text="@string/label_id"
                style="@style/TextStyle.Medium"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvLabelId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvLabelId"
                tools:text="3631407"
                style="@style/TextStyle.Bold"
                android:layout_marginStart="10dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLabelUserType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/ivUserImages"
                app:layout_constraintTop_toBottomOf="@id/tvLabelId"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/label_type"
                tools:text="@string/label_type"
                style="@style/TextStyle.Medium"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tvLabelUserType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvLabelUserType"
                tools:text="User"
                style="@style/TextStyle.Bold"
                android:layout_marginStart="10dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>