<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.mygitapplication2.viewModel.DetailsFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvHello"
                style="@style/TextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_hello"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/label_hello" />

            <TextView
                android:id="@+id/tvUserName"
                style="@style/TextStyle.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHello"
                tools:text="Shwet" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivUserImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/tvUserName"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewMain"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llProject"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/viewMain">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcvState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_followers">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvState"
                            style="@style/TextStyle.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/label_followers"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/label_followers" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFollowers"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layoutAnimation="@anim/layout_animation"
                android:paddingBottom="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llProject"
                tools:itemCount="10"
                tools:listitem="@layout/item_git_users"
                android:visibility="@{viewModel.dataModel.noResultFoundVisible ? View.GONE : View.VISIBLE}"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clNoResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llProject"
                android:visibility="@{viewModel.dataModel.noResultFoundVisible ? View.VISIBLE : View.GONE}"
                app:layout_constraintVertical_bias="0.3"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNoResult01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextStyle.Bold"
                    android:textSize="28sp"
                    android:text="@string/label_no_result_01"
                    tools:text="@string/label_no_result_01"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNoResult03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvNoResult01"
                    style="@style/TextStyle.Medium"
                    android:textSize="22sp"
                    android:text="@string/label_no_result_03"
                    tools:text="@string/label_no_result_03"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ftBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>